exports[`Input component snapshot renders basic required data 1`] = `
<div
  className="">
  <label
    className="label"
    htmlFor="email" />
  <input
    className="src-components-Input-___style-local__input___AWI3s"
    id="Form"
    name="email"
    value="" />
  <div
    className="src-components-InlineError-___style-local__inlineError___rL1Dx" />
</div>
`;

exports[`Input component snapshot renders extra info and it is active and invalid 1`] = `
<div
  className="src-components-Input-___style-local__error___1gxey">
  <label
    className="label"
    htmlFor="email">
    Email
  </label>
  <input
    className="src-components-Input-___style-local__input___AWI3s"
    id="Form"
    name="email"
    placeholder="Email"
    type="email"
    value="notAnEmail" />
  <div
    className="src-components-InlineError-___style-local__inlineError___rL1Dx">
    Input is invalid
  </div>
</div>
`;

exports[`Input component snapshot renders label and input is invalid 1`] = `
<div
  className="src-components-Input-___style-local__error___1gxey">
  <label
    className="label"
    htmlFor="email">
    Email
  </label>
  <input
    className="src-components-Input-___style-local__input___AWI3s"
    id="Form"
    name="email"
    value="notAnEmail" />
  <div
    className="src-components-InlineError-___style-local__inlineError___rL1Dx">
    Input is invalid
  </div>
</div>
`;

exports[`Input component snapshot renders label and input is required 1`] = `
<div
  className="src-components-Input-___style-local__error___1gxey">
  <label
    className="label"
    htmlFor="email">
    Email
  </label>
  <input
    className="src-components-Input-___style-local__input___AWI3s"
    id="Form"
    name="email"
    value="" />
  <div
    className="src-components-InlineError-___style-local__inlineError___rL1Dx">
    Input required
  </div>
</div>
`;

exports[`Input component snapshot renders label and is focused 1`] = `
<div
  className="">
  <label
    className="label"
    htmlFor="email">
    Email
  </label>
  <input
    className="src-components-Input-___style-local__input___AWI3s"
    id="Form"
    name="email"
    value="test@email.com" />
  <div
    className="src-components-InlineError-___style-local__inlineError___rL1Dx" />
</div>
`;
